--- a/templates/sae14/portfolio.html.twig
+++ b/templates/sae14/portfolio.html.twig
@@ -50,7 +50,7 @@
 
             .button:hover {
             background-color: #3691B4;
-            color: black;
+            color: white;
             }
 
             .button .active {
