--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
             </div>
             {% block body %}{% endblock %}
             <footer>
-                <p style="font-size:2vw;">© Alexis Barou, 2022</p>
+                <p style="font-size:2vw;">© Alexis Barou 2022</p>
             </footer>
             <script>
             function myFunction() {
