--- a/templates/sae14/portfoliocca.html.twig
+++ b/templates/sae14/portfoliocca.html.twig
@@ -1,1 +1,7 @@
 {% extends "base.html.twig" %}
+    {% block body %}
+        <head>
+            <style>
+            </style>
+        </head>
+    {% endblock %}
