--- a/templates/sae14/portfolio.html.twig
+++ b/templates/sae14/portfolio.html.twig
@@ -61,19 +61,19 @@
     </head>
     
     <body>
-        <br> <h2 style="font-size:2vw;">Différentes compétences</h2> <br>
+        <br> <h1 style="font-size:2vw;">Différentes compétences</h1> <br>
             <div class="col">
                 <div class="container">
                     <img src="image_cca.jpg" class="responsive" alt="Snow" style="width:100%">
-                    <button onclick="window.location.href= 'http://127.0.0.1:8000/moneportfolio/cca';" class="btn button" style="font-size:1vw;"> CCA - Administrer les réseaux et l'internet</a></button>
+                    <button onclick="window.location.href= 'http://127.0.0.1:8000/moneportfoliocca';" class="btn button" style="font-size:1vw;"> CCA - Administrer les réseaux et l'internet</a></button>
                 </div>
                 <div class="container">
                     <img src="image_ccb.jpg" class="responsive" alt="Snow" style="width:100%">
-                    <button onclick="window.location.href= 'http://127.0.0.1:8000/moneportfolio/ccb';" class="btn button" style="font-size:1vw;">CCB - Connecter les entreprises et les usagers</button>
+                    <button onclick="window.location.href= 'http://127.0.0.1:8000/moneportfolioccb';" class="btn button" style="font-size:1vw;">CCB - Connecter les entreprises et les usagers</button>
                 </div>
                 <div class="container">
                     <img src="image_ccc.jpg" class="responsive" alt="Snow" style="width:100%">
-                    <button onclick="window.location.href= 'http://127.0.0.1:8000/moneportfolio/ccc';" class="btn button" style="font-size:1vw;">CCC - Créer des outils et applications informatiques pour les R&T</button>
+                    <button onclick="window.location.href= 'http://127.0.0.1:8000/moneportfolioccc';" class="btn button" style="font-size:1vw;">CCC - Créer des outils et applications informatiques pour les R&T</button>
                 </div>
             </div>
     </body>
