--- a/templates/sae14/portfoliocca.html.twig
+++ b/templates/sae14/portfoliocca.html.twig
@@ -1,7 +1,60 @@
 {% extends "base.html.twig" %}
-    {% block body %}
-        <head>
-            <style>
-            </style>
-        </head>
-    {% endblock %}
+{% block body %}
+    <head>
+        <style>
+
+            .aprentissages-critiques{
+                background-color : #A1D6E5;
+                text-align: center;
+            }
+
+            .h3{
+               font-family: "Lato", sans-serif;
+               font-size: 10px; 
+            }
+        </style>
+    </head>
+    
+    <body>
+    <br> <h1 style="font-size:2vw;">CCA - Administrer les réseaux et l’Internet</h1> <br>
+            <h2 style="font-size:1.5vw;">en choisissant les solutions et technologies réseaux adaptées
+                en respectant les principes fondamentaux de la sécurité informatique
+                en utilisant une approche rigoureuse pour la résolution des dysfonctionnements
+                en respectant les règles métiers
+                en assurant une veille technologique
+            </h2>> <br>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="aprentissages-critiques">
+                            <h3 style="font-size:0.8vw;"> Maîtriser les lois fondamentales de l’électricité afin d’intervenirsur des équipements de réseaux et télécommunications :</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="aprentissages-critiques">
+                            <h3 style="font-size:1.5vw;"> Maîtriser les lois fondamentales de l’électricité afin d’intervenirsur des équipements de réseaux et télécommunications</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="aprentissages-critiques">
+                            <h3 style="font-size:1.5vw;"> Maîtriser les lois fondamentales de l’électricité afin d’intervenirsur des équipements de réseaux et télécommunications</h3>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="aprentissages-critiques">
+                            <h3 style="font-size:1.5vw;"> Maîtriser les lois fondamentales de l’électricité afin d’intervenirsur des équipements de réseaux et télécommunications</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+    </body>
+
+{% endblock %}
