--- a/templates/sae14/portfolio.html.twig
+++ b/templates/sae14/portfolio.html.twig
@@ -2,80 +2,365 @@
     {% block body %}
     <head>
         <style>
-        .container {
-            position: relative;
-            width: 100%;
-            max-width: 400px;
-            text-align: center;
-            }
-        
-        .container img {
-            width: 100%;
-            height: auto;
-        }
-        
-        .container .btn {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%, -50%);
-            background-color: rgb(4, 12, 41);
-            color: white;
-            font-size: 16px;
-            padding: 12px 24px;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            text-align: center;
-        }
-        
-        .container .btn:hover {
-            background-color:blue;
-        }
+            .u-margin-bottom-small {
+	margin-bottom: 1.5rem !important;
+	}
 
-        .col {
-            column-count: 3;
-        }
-        
-        .button{
-            float: left;
-            display: block;
-            color: #f2f2f2;
-            text-align: left;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-            }
+	.u-margin-bottom-medium {
+	margin-bottom: 4rem !important;
+	}
 
-            .button:hover {
-            background-color: #3691B4;
-            color: white;
-            }
+	.u-margin-top-big {
+	margin-top: 5rem !important;
+	}
 
-            .button .active {
-            background-color: rgb(4, 12, 41);
-            color: white;
-            }
+	.heading-primary {
+	color: #fff;
+	text-transform: uppercase;
+	-webkit-backface-visibility: hidden;
+			backface-visibility: hidden;
+	margin-bottom: 6rem;
+	}
+
+	.heading-primary--main {
+	display: block;
+	font-size: 6rem;
+	font-weight: 400;
+	letter-spacing: 3.5rem;
+	-webkit-animation-name: moveInLeft;
+			animation-name: moveInLeft;
+	-webkit-animation-duration: 1s;
+			animation-duration: 1s;
+	-webkit-animation-timing-function: ease-out;
+			animation-timing-function: ease-out;
+	/*
+			animation-delay: 3s;
+			animation-iteration-count: 3;
+	*/
+	}
+
+	.heading-primary--sub {
+	display: block;
+	font-size: 2rem;
+	font-weight: 700;
+	letter-spacing: 1.75rem;
+	-webkit-animation: moveInRight 1s ease-out;
+			animation: moveInRight 1s ease-out;
+	}
+
+	.heading-secondary {
+	font-size: 3.5rem;
+	text-transform: uppercase;
+	font-weight: 700;
+	color: transparent;
+	letter-spacing: 0.2rem;
+	line-height: 1;
+	-webkit-transition: all 0.2s;
+	transition: all 0.2s;
+	color: #eee;
+	}
+
+	.btn, .btn:link, .btn:visited {
+	text-transform: uppercase;
+	text-decoration: none;
+	padding: 1.5rem 4rem;
+	display: inline-block;
+	border-radius: 0.5rem;
+	-webkit-transition: all 0.2s;
+	transition: all 0.2s;
+	position: relative;
+	font-size: 1.6rem;
+	border: none;
+	cursor: pointer;
+	}
+
+	.btn:hover {
+	-webkit-transform: translateY(-3px);
+			transform: translateY(-3px);
+	-webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+			box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+	}
+
+	.btn:hover::after {
+	-webkit-transform: scaleX(1.4) scaleY(1.6);
+			transform: scaleX(1.4) scaleY(1.6);
+	opacity: 0;
+	}
+
+	.btn:active, .btn:focus {
+	outline: none;
+	-webkit-transform: translateY(-1px);
+			transform: translateY(-1px);
+	-webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+			box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+	}
+
+	.btn--white {
+	background-color: #fff;
+	color: #777;
+	}
+
+	.btn--white::after {
+	background-color: #fff;
+	}
+
+	.btn--green {
+	background: -webkit-gradient(linear, left top, right top, from(#fc466b), to(#3f5efb));
+	background: linear-gradient(to right, #fc466b, #3f5efb);
+	color: #fff;
+	}
+
+	.btn--green::after {
+	background-color: #55c57a;
+	}
+
+	*,
+	*::after,
+	*::before {
+	margin: 0;
+	padding: 0;
+	-webkit-box-sizing: inherit;
+			box-sizing: inherit;
+	}
+
+	html {
+	font-size: 62.5%;
+	}
+
+	.section-plans {
+	background-color: rgb(4, 12, 41);
+	padding: 4rem 0 4rem 0;
+	}
+
+	.card {
+	-webkit-perspective: 150rem;
+	perspective: 150rem;
+	-moz-perspective: 150rem;
+	position: relative;
+	height: 52rem;
+	}
+
+	.card__side {
+	height: 52rem;
+	-webkit-transition: all 0.8s ease;
+	transition: all 0.8s ease;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	-webkit-backface-visibility: hidden;
+			backface-visibility: hidden;
+	border-radius: 3px;
+	overflow: hidden;
+	-webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+			box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+	}
+
+	.card__side--front {
+	background-color: #fff;
+	}
+
+	.card__side--front-1 {
+	background: linear-gradient(-45deg, #f403d1, #64b5f6);
+	}
+
+	.card__side--front-2 {
+	background: linear-gradient(-45deg, #f321d7, #ffec61);
+	}
+
+	.card__side--front-3 {
+	background: linear-gradient(-45deg, #24ff72, #9a4eff);
+	}
+
+	.card__side--back {
+	-webkit-transform: rotateY(180deg);
+			transform: rotateY(180deg);
+	}
+
+	.card__side--back-1 {
+	background: linear-gradient(-45deg, #64b5f6, #f403d1);
+	}
+
+	.card__side--back-2 {
+	background: linear-gradient(-45deg, #ffec61, #f321d7);
+	}
+
+	.card__side--back-3 {
+	background: linear-gradient(-45deg, #9a4eff, #24ff72);
+	}
+
+	.card:hover .card__side--front-1,
+	.card:hover .card__side--front-2,
+	.card:hover .card__side--front-3 {
+	-webkit-transform: rotateY(-180deg);
+			transform: rotateY(-180deg);
+	}
+
+	.card:hover .card__side--back {
+	-webkit-transform: rotateY(0);
+			transform: rotateY(0);
+	}
+
+	.card__title {
+	height: 45rem;
+	padding: 4rem 2rem 2rem;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+		-ms-flex-direction: column;
+			flex-direction: column;
+	-webkit-box-pack: center;
+		-ms-flex-pack: center;
+			justify-content: center;
+	-webkit-box-align: center;
+		-ms-flex-align: center;
+			align-items: center;
+	}
+
+	.card__title--1 .fas {
+	font-size: 5rem;
+	}
+
+	.card__title--2 .fas {
+	font-size: 5rem;
+	}
+
+	.card__title--3 .fas {
+	font-size: 5rem;
+	}
+
+	.card__heading {
+	font-size: 3rem;
+	font-weight: 200;
+	text-align: center;
+	color: #fff;
+	width: 75%;
+	}
+
+	.card__heading-span {
+	padding: 1rem 1.5rem;
+	-webkit-box-decoration-break: clone;
+	box-decoration-break: clone;
+	}
+
+	.card__cta {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+			transform: translate(-50%, -50%);
+	width: 90%;
+	text-align: center;
+	}
+
+	.card__price-box {
+	text-align: center;
+	color: #fff;
+	margin-bottom: 8rem;
+	}
+
+	.card__price-only {
+	font-size: 3.5rem;
+	text-transform: uppercase;
+	}
+
+	.row {
+	max-width: 114rem;
+	margin: 0 auto;
+	}
+
+	.row:not(:last-child) {
+	margin-bottom: 5rem;
+	margin-top: 5rem;
+	}
+
+	.row::after {
+	content: "";
+	display: table;
+	clear: both;
+	}
+
+	.row [class^="col-"] {
+	float: left;
+	}
+
+	.row [class^="col-"]:not(:last-child) {
+	margin-right: 6rem;
+	}
+
+	.row .col-1-of-3 {
+	width: calc((100% - 2 * 6rem) / 3);
+	}
         </style>
     </head>
     
     <body>
-        <br> <h1 style="font-size:2vw;">Différentes compétences</h1> <br>
-            <div class="col">
-                <div class="container">
-                    <img src="image_cca.jpg" class="responsive" alt="Snow" style="width:100%">
-                    <button onclick="window.location.href= 'http://127.0.0.1:8000/moneportfoliocca';" class="btn button" style="font-size:1vw;"> CCA - Administrer les réseaux et l'internet</a></button>
+        <div class="container">
+            <br> <h1 style="font-size:2vw;">Différentes compétences</h1> <br>
+        </div>
+                <section class="section-plans" id="section-plans">
+                        <div class="u-center-text u-margin-bottom-big">
+                        <h2 class="heading-secondary" style="font-size:1.7vw;"> Mon parcours en quelques clics :
+                        </h2>
+                        </div>
+                    <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card">
+                        <div class="card__side card__side--front-1">
+                            <div class="card__title card__title--1">
+                            <i class='fa fa-fw fa-address-card' style='font-size:32px'></i>
+                            <h4 class="card__heading" style="font-size:2vw;">Mon CV</h4>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Ma formation</p>
+                            </div>
+                            <a href="/moncv" class="btn btn--white">GO</a>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <div class="card">
+                        <div class="card__side card__side--front-2">
+                            <div class="card__title card__title--2">
+                            <i class='fa fa-fw fa-folder-open' style='font-size:32px'></i>
+                            <h4 class="card__heading" style="font-size:2vw;">Mon e-portfolio</h4>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-2">
+                            <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Mes compétences</p>
+                            </div>
+                            <a href="/moneportfolio" class="btn btn--white">GO</a>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <div class="card">
+                        <div class="card__side card__side--front-3">
+                            <div class="card__title card__title--3">
+                            <i class='fa fa-fw fa-user' style='font-size:32px'></i>
+                            <h4 class="card__heading" style="font-size:2vw;">Qui suis-je</h4>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-3">
+                            <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Mes passions</p>
+                            </div>
+                            <a href="#popup" class="btn btn--white">GO</a>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
                 </div>
-                <div class="container">
-                    <img src="image_ccb.jpg" class="responsive" alt="Snow" style="width:100%">
-                    <button onclick="window.location.href= 'http://127.0.0.1:8000/moneportfolioccb';" class="btn button" style="font-size:1vw;">CCB - Connecter les entreprises et les usagers</button>
-                </div>
-                <div class="container">
-                    <img src="image_ccc.jpg" class="responsive" alt="Snow" style="width:100%">
-                    <button onclick="window.location.href= 'http://127.0.0.1:8000/moneportfolioccc';" class="btn button" style="font-size:1vw;">CCC - Créer des outils et applications informatiques pour les R&T</button>
-                </div>
-            </div>
-    </body>
+</body>
 
     {% endblock %}
