--- a/templates/sae14/portfolio.html.twig
+++ b/templates/sae14/portfolio.html.twig
@@ -15,7 +15,7 @@
 	}
 
 	.heading-primary {
-	color: #fff;
+	color: rgb(26, 185, 206);
 	text-transform: uppercase;
 	-webkit-backface-visibility: hidden;
 			backface-visibility: hidden;
@@ -124,12 +124,11 @@
 	}
 
 	html {
-	font-size: 62.5%;
+	font-size: 60%;
 	}
 
 	.section-plans {
-	background-color: rgb(4, 12, 41);
-	padding: 4rem 0 4rem 0;
+	padding: 2rem 0 1rem 0;
 	}
 
 	.card {
@@ -287,22 +286,20 @@
 	}
 
 	.row [class^="col-"]:not(:last-child) {
-	margin-right: 6rem;
+	margin-right: 3.5rem;
 	}
 
 	.row .col-1-of-3 {
-	width: calc((100% - 2 * 6rem) / 3);
+	width: calc((100% - 2 * 3.5rem) / 3);
 	}
+
         </style>
     </head>
     
-    <body>
-        <div class="container">
-            <br> <h1 style="font-size:2vw;">Différentes compétences</h1> <br>
-        </div>
-                <section class="section-plans" id="section-plans">
+    <body>       
+				<section class="section-plans" id="section-plans">
                         <div class="u-center-text u-margin-bottom-big">
-                        <h2 class="heading-secondary" style="font-size:1.7vw;"> Mon parcours en quelques clics :
+                        <h2 class="heading-secondary" style="font-size:1.7vw;">  :
                         </h2>
                         </div>
                     <div class="row">
@@ -310,16 +307,16 @@
                         <div class="card">
                         <div class="card__side card__side--front-1">
                             <div class="card__title card__title--1">
-                            <i class='fa fa-fw fa-address-card' style='font-size:32px'></i>
-                            <h4 class="card__heading" style="font-size:2vw;">Mon CV</h4>
+                            <i class='fa fa-wifi' style='font-size:32px'></i>
+                            <h4 class="card__heading" style="font-size:2vw;">Administrer les réseaux et l’Internet</h4>
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-1">
                             <div class="card__cta">
                             <div class="card__price-box">
-                                <p class="card__price-only">Ma formation</p>
+                                <p class="card__price-only">....</p>
                             </div>
-                            <a href="/moncv" class="btn btn--white">GO</a>
+                            <a href="/moneportfoliocca" class="btn btn--white">GO</a>
                             </div>
                         </div>
                         </div>
@@ -328,16 +325,16 @@
                         <div class="card">
                         <div class="card__side card__side--front-2">
                             <div class="card__title card__title--2">
-                            <i class='fa fa-fw fa-folder-open' style='font-size:32px'></i>
-                            <h4 class="card__heading" style="font-size:2vw;">Mon e-portfolio</h4>
+                            <i class='fa fa-users' style='font-size:32px'></i>
+                            <h4 class="card__heading" style="font-size:2vw;">Connecter les entreprises et les usagers</h4>
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-2">
                             <div class="card__cta">
                             <div class="card__price-box">
-                                <p class="card__price-only">Mes compétences</p>
+                                <p class="card__price-only">...</p>
                             </div>
-                            <a href="/moneportfolio" class="btn btn--white">GO</a>
+                            <a href="/moneportfolioccb" class="btn btn--white">GO</a>
                             </div>
                         </div>
                         </div>
@@ -346,16 +343,16 @@
                         <div class="card">
                         <div class="card__side card__side--front-3">
                             <div class="card__title card__title--3">
-                            <i class='fa fa-fw fa-user' style='font-size:32px'></i>
-                            <h4 class="card__heading" style="font-size:2vw;">Qui suis-je</h4>
+                            <i class='fa fa-desktop' style='font-size:32px'></i>
+                            <h4 class="card__heading" style="font-size:2vw;">Créer des outils et applications informatiques pour les R&T</h4>
                             </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-3">
                             <div class="card__cta">
                             <div class="card__price-box">
-                                <p class="card__price-only">Mes passions</p>
+                                <p class="card__price-only">...</p>
                             </div>
-                            <a href="#popup" class="btn btn--white">GO</a>
+                            <a href="/moneportfolioccc" class="btn btn--white">GO</a>
                             </div>
                         </div>
                     </div>
