--- a/templates/sae14/cv.html.twig
+++ b/templates/sae14/cv.html.twig
@@ -3,13 +3,26 @@
     <head>
         <style>
         img {
-            width: 100%;
-        }
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            border-radius: 8px;
+            width: 45%;
+            outline-style: solid;
+            border: 1px solid black;
+            outline-color: white;
+            outline-width: thin;
+            border-radius: 8px;
         }
         </style>
     </head>
     
     <body>
-        <img src="CV.png">
+                <img src="CV.png">
+                </img>
+            </div>
+        </div>
     </body>
     {% endblock %}
