--- a/templates/sae14/portfoliocca.html.twig
+++ b/templates/sae14/portfoliocca.html.twig
@@ -7,29 +7,59 @@
                 text-align: center;
             }
 
-            .h3{
+            h3{
                font-family: "Lato", sans-serif;
-               font-size: 10px; 
+               color: rgb(4, 12, 41);
+            }
+
+            h4{
+                font-family: "Lato", sans-serif; 
+                color: green;
+                font-weight: bold;
+                text-align: left;
+            }
+
+            h5{
+                font-family: "Lato", sans-serif; 
+                color: green;
+                font-weight: bold;
+                text-align: left;
+            }
+
+            u{
+                color: green;
+            }
+
+            .btn {
+            background-color: #06495F;
+            border: none;
+            color: white;
+            padding: 12px 30px;
+            cursor: pointer;
+            font-size: 20px;
             }
         </style>
     </head>
     
     <body>
-    <br> <h1 style="font-size:2vw;">CCA - Administrer les réseaux et l’Internet</h1> <br>
+    <br> <h1 style="font-size:2vw;">Administrer les réseaux et l’Internet</h1> <br>
             <div class="container">
                 <h2 style="font-size:1.5vw;">en choisissant les solutions et technologies réseaux adaptées
                     en respectant les principes fondamentaux de la sécurité informatique
                     en utilisant une approche rigoureuse pour la résolution des dysfonctionnements
                     en respectant les règles métiers
                     en assurant une veille technologique
-                </h2>> <br>
+                </h2> <br>
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="aprentissages-critiques">
-                                <h3 style="font-size:0.8vw;"> Maîtriser les lois fondamentales de l’électricité afin d’intervenirsur des équipements de réseaux et télécommunications :</h3>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
+                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
+                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
+                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
+                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition</div>
+                                        </div>
                             </div>
                         </div>
                         <div class="col-sm-6">
