--- a/templates/sae14/portfoliocca.html.twig
+++ b/templates/sae14/portfoliocca.html.twig
@@ -38,6 +38,8 @@
             cursor: pointer;
             font-size: 20px;
             }
+
+            progress
         </style>
     </head>
     
@@ -58,28 +60,43 @@
                                 <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
                                 <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
                                         <div class="progress">
-                                            <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition</div>
+                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
                                         </div>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="aprentissages-critiques">
-                                <h3 style="font-size:1.5vw;"> Maîtriser les lois fondamentales de l’électricité afin d’intervenirsur des équipements de réseaux et télécommunications</h3>
-                                    <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
+                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
+                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
+                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
+                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                        </div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="aprentissages-critiques">
-                                <h3 style="font-size:1.5vw;"> Maîtriser les lois fondamentales de l’électricité afin d’intervenirsur des équipements de réseaux et télécommunications</h3>
+                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
+                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
+                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
+                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                        </div>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="aprentissages-critiques">
-                                <h3 style="font-size:1.5vw;"> Maîtriser les lois fondamentales de l’électricité afin d’intervenirsur des équipements de réseaux et télécommunications</h3>
+                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
+                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
+                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
+                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                        </div>
                             </div>
                         </div>
                     </div>
