--- a/templates/sae14/portfolioccc.html.twig
+++ b/templates/sae14/portfolioccc.html.twig
@@ -1,1 +1,107 @@
 {% extends "base.html.twig" %}
+{% block body %}
+    <head>
+        <style>
+            .aprentissages-critiques{
+                background-color : #A1D6E5;
+                text-align: center;
+            }
+
+            h3{
+               font-family: "Lato", sans-serif;
+               color: rgb(4, 12, 41);
+            }
+
+            h4{
+                font-family: "Lato", sans-serif; 
+                color: green;
+                font-weight: bold;
+                text-align: left;
+            }
+
+            h5{
+                font-family: "Lato", sans-serif; 
+                color: green;
+                font-weight: bold;
+                text-align: left;
+            }
+
+            u{
+                color: green;
+            }
+
+            .btn {
+            background-color: #06495F;
+            border: none;
+            color: white;
+            padding: 12px 30px;
+            cursor: pointer;
+            font-size: 20px;
+            }
+
+            progress
+        </style>
+    </head>
+    
+    <body>
+    <br> <h1 style="font-size:2vw;">Créer des outils et applications informatiques pour les R&T</h1> <br>
+            <div class="container">
+                <h2 style="font-size:1.5vw;">en choisissant les solutions et technologies réseaux adaptées
+                    en respectant les principes fondamentaux de la sécurité informatique
+                    en utilisant une approche rigoureuse pour la résolution des dysfonctionnements
+                    en respectant les règles métiers
+                    en assurant une veille technologique
+                </h2> <br>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="aprentissages-critiques">
+                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
+                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
+                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
+                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                        </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="aprentissages-critiques">
+                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
+                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
+                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
+                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                        </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="aprentissages-critiques">
+                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
+                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
+                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
+                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                        </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="aprentissages-critiques">
+                                <h3 style="font-size:1.5vw;"> Maîtriser les fondamentales de l’électricité (pour intervenir sur des équipements de réseaux et télécommunications) :</h3>
+                                <u><h4 style="font-size:1.5vw"> <i class="fa fa-check"></i> </h4></u>
+                                <h5 style="font-size:1vw"> - de déterminer un pont diviseur<br>- calculer une tension et un courant</h5>
+                                <button class="btn"><a href="cv.png" download><i class="fa fa-download"></i> Download</button></a>
+                                        <div class="progress">
+                                            <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Niveau d'accquisition : validé</div>
+                                        </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>    
+            </div>
+    </body>
+
+{% endblock %}
